--- a/config/application.yml
+++ b/config/application.yml
@@ -12,17 +12,18 @@
 
 GMAIL_USERNAME: TU_NOMBRE
 GMAIL_PASSWORD: TU_PASSWORD
-MAILCHIMP_API_KEY: 532312ff07804bb62d6e3443fe0f8e57-us13
+MAILCHIMP_API_KEY: RHBiRbF7lHw7gJUwc6EmOA
 MAILCHIMP_LIST_ID: Tu List_ID de MailChimp
 DOMAIN_NAME: 
 OWNER_EMAIL: Propietario de e-mail
 
 #DATOS PARA LA BASE DE DATOS
-USERNAME_DB: andrea
-PASSWORD_DB: as20914190
+USERNAME_DB: boris
+PASSWORD_DB: '19242323'
 
 #cambiar por el correo corporativo admin@alerasin.com
-MANDRILL_USERNAME: tecnodetalles@gmail.com  
+MANDRILL_USERNAME: tecnodetalles@gmail.com
+ 
 MANDRILL_API_KEY: XCu7HqUjZJZZ-fMGhKX1Bw
 
 #CARRIERWAVE
